--- a/Adhesive/Adhesive.vcxproj
+++ b/Adhesive/Adhesive.vcxproj
@@ -148,7 +148,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BasicObject.cpp" />
+    <ClCompile Include="Demo.cpp" />
     <ClCompile Include="GlfwStandardCallbackProvider.cpp" />
+    <ClCompile Include="PniBuffer.cpp" />
+    <ClCompile Include="Rectangle.cpp" />
     <ClCompile Include="StandardCamera.cpp" />
     <ClCompile Include="Cube.cpp" />
     <ClCompile Include="GlfwContext.cpp" />
@@ -160,8 +164,12 @@
     <ClCompile Include="SimpleProgram.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BasicObject.h" />
+    <ClInclude Include="Demo.h" />
     <ClInclude Include="GlfwCallbackGenerator.h" />
     <ClInclude Include="GlfwStandardCallbackProvider.h" />
+    <ClInclude Include="PniBuffer.h" />
+    <ClInclude Include="Rectangle.h" />
     <ClInclude Include="StandardCamera.h" />
     <ClInclude Include="Cube.h" />
     <ClInclude Include="GlfwContext.h" />
