--- a/Adhesive/Adhesive.vcxproj
+++ b/Adhesive/Adhesive.vcxproj
@@ -101,13 +101,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\opengl-libs\glew\include;C:\opengl-libs\glfw\include;C:\opengl-libs\glm include;C:\dev\c++\peg;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\opengl-libs\glew\include;C:\opengl-libs\glfw\include;C:\opengl-libs\glm include;C:\dev\c++\peg;C:\opengl-libs\freetype\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\opengl-libs\glew\lib\Release\x64;C:\opengl-libs\glfw\lib-vc2015;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>glew32.lib;glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\opengl-libs\glew\lib\Release\x64;C:\opengl-libs\glfw\lib-vc2015;C:\opengl-libs\freetype\objs\vc2010\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>glew32.lib;glfw3.lib;opengl32.lib;freetype271.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -136,20 +136,22 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\opengl-libs\glew\include;C:\opengl-libs\glfw\include;C:\opengl-libs\glm include;C:\dev\c++\peg;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\opengl-libs\glew\include;C:\opengl-libs\glfw\include;C:\opengl-libs\glm include;C:\dev\c++\peg;C:\opengl-libs\freetype\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\opengl-libs\glew\lib\Release\x64;C:\opengl-libs\glfw\lib-vc2015;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>glew32.lib;glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\opengl-libs\glew\lib\Release\x64;C:\opengl-libs\glfw\lib-vc2015;C:\opengl-libs\freetype\objs\vc2010\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>glew32.lib;glfw3.lib;opengl32.lib;freetype271.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BasicObject.cpp" />
+    <ClCompile Include="DebugHud.cpp" />
     <ClCompile Include="Demo.cpp" />
+    <ClCompile Include="freetype.cpp" />
     <ClCompile Include="GlfwStandardCallbackProvider.cpp" />
     <ClCompile Include="PniBuffer.cpp" />
     <ClCompile Include="Rectangle.cpp" />
@@ -159,13 +161,14 @@
     <ClCompile Include="GlslProgram.cpp" />
     <ClCompile Include="glutils.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="MyInputHandler.cpp" />
     <ClCompile Include="StandardScene.cpp" />
     <ClCompile Include="SimpleProgram.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BasicObject.h" />
+    <ClInclude Include="DebugHud.h" />
     <ClInclude Include="Demo.h" />
+    <ClInclude Include="freetype.h" />
     <ClInclude Include="GlfwCallbackGenerator.h" />
     <ClInclude Include="GlfwStandardCallbackProvider.h" />
     <ClInclude Include="PniBuffer.h" />
@@ -176,7 +179,6 @@
     <ClInclude Include="GlfwCallbackProvider.h" />
     <ClInclude Include="GlslProgram.h" />
     <ClInclude Include="glutils.h" />
-    <ClInclude Include="MyInputHandler.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="StandardScene.h" />
     <ClInclude Include="SimpleProgram.h" />
@@ -184,6 +186,12 @@
   <ItemGroup>
     <None Include="basic.frag" />
     <None Include="basic.vert" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="fontmap.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <Font Include="arial.ttf" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
